bit more structure

--- a/DataBinding/dataBindingComplete/dataBinding.html
+++ b/DataBinding/dataBindingComplete/dataBinding.html
@@ -11,7 +11,7 @@
 {{db.helloWorld}}
 
 
-<script type="text/javascript" src="../assets/vendor/angular/angular.js"></script>
+<script type="text/javascript" src="../../assets/vendor/angular/angular.js"></script>
 <script type="text/javascript" src="dataBinding.js"></script>
 </body>
 </html>
