working complete stop watch constructor

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </a>
 
 
-  <h1>Contents</h1>
+  <h1>Completed Contents</h1>
   <a ng-repeat="link in mainCtrl.completeContents"
     ng-href="{{link.url}}">
     <h3>{{link.label}}</h3>
