--- a/2-stopWatch/stopWatchComplete/stopWatchComplete.html
+++ b/2-stopWatch/stopWatchComplete/stopWatchComplete.html
@@ -14,6 +14,6 @@
 </div>
 
 <script type="text/javascript" src="../../assets/vendor/angular/angular.js"></script>
-<script type="text/javascript" src="../../stopWatch/stopWatchComplete/stopWatchComplete.js"></script>
+<script type="text/javascript" src="stopWatchComplete.js"></script>
 </body>
 </html>
