--- a/3-stopWatchList/stopWatchListComplete/stopWatchListComplete.html
+++ b/3-stopWatchList/stopWatchListComplete/stopWatchListComplete.html
@@ -20,6 +20,6 @@
 <button ng-click="swListCtrl.createNewStopWatch(swListCtrl.stopWatchList)">Add New StopWatch</button>
 
 <script type="text/javascript" src="../../assets/vendor/angular/angular.js"></script>
-<script type="text/javascript" src="../../stopWatchList/stopWatchListComplete/stopWatchListComplete.js"></script>
+<script type="text/javascript" src="stopWatchListComplete.js"></script>
 </body>
 </html>
